# jgrep

./: .hlint.template.yaml  .hlint.yaml  README.md  jgrep.cabal  schema.yaml
.github/workflows/: haskell.yml
app/App/: Commands.hs
app/App/Commands/: Demo.hs  Query.hs  Types.hs
src/JGrep/: Core.hs  Database.hs  Errors.hs  Query.hs  Schema.hs  Type.hs
test/JGrep/: CoreSpec.hs
