cabal-version: 2.2

name:                   jgrep
version:                0.6.3.0
synopsis:               Primitive functions and data types
description:            Primitive functions and data types.
category:               Data
stability:              Experimental
homepage:               http://github.com/haskell-works/jgrep#readme
bug-reports:            https://github.com/haskell-works/jgrep/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016-2021 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
tested-with:            GHC == 8.10.4
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type:                 git
  location:             https://github.com/haskell-works/jgrep

common base                       { build-depends: base                       >= 4.11       && < 5      }

common aeson                      { build-depends: aeson                      >= 1.5.6.0    && < 1.6    }
common bytestring                 { build-depends: bytestring                 >= 0.9        && < 0.11   }
common deepseq                    { build-depends: deepseq                    >= 1.4        && < 1.5    }
common directory                  { build-depends: directory                  >= 1.2        && < 1.4    }
common dlist                      { build-depends: dlist                      >= 1.0        && < 1.1    }
common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.19   }
common doctest-discover           { build-depends: doctest-discover           >= 0.2        && < 0.3    }
common exceptions                 { build-depends: exceptions                 >= 0.8        && < 0.11   }
common generic-lens               { build-depends: generic-lens               >= 2.1.0.0    && < 3      }
common ghc-prim                   { build-depends: ghc-prim                   >= 0.5        && < 0.8    }
common hedgehog                   { build-depends: hedgehog                   >= 1.0        && < 1.1    }
common hspec                      { build-depends: hspec                      >= 2.4        && < 2.8    }
common hw-hspec-hedgehog          { build-depends: hw-hspec-hedgehog          >= 0.1        && < 0.2    }
common lens                       { build-depends: lens                       >= 5.0.1      && < 6      }
common lens-aeson                 { build-depends: lens-aeson                 >= 1.1.1      && < 1.2    }
common mmap                       { build-depends: mmap                       >= 0.5        && < 0.6    }
common optparse-applicative       { build-depends: optparse-applicative       >= 0.16.1.0   && < 0.17   }
common semigroups                 { build-depends: semigroups                 >= 0.8.4      && < 0.20   }
common text                       { build-depends: text                       >= 1.2.4.1    && < 1.3    }
common transformers               { build-depends: transformers               >= 0.4        && < 0.6    }
common unliftio-core              { build-depends: unliftio-core              >= 0.1.2.0    && < 0.3    }
common unordered-containers       { build-depends: unordered-containers       >= 0.2.14.0   && < 0.3    }
common vector                     { build-depends: vector                     >= 0.12       && < 0.13   }
common yaml                       { build-depends: yaml                       >= 0.11.5.0   && < 0.12   }

common jgrep
  build-depends:        jgrep

common config
  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -msse4.2

library
  import:               base, config
                      , aeson
                      , bytestring
                      , deepseq
                      , generic-lens
                      , ghc-prim
                      , lens
                      , mmap
                      , text
                      , transformers
                      , unliftio-core
                      , unordered-containers
                      , vector
                      , yaml
  exposed-modules:      JGrep.Database
                        JGrep.Errors
                        JGrep.Query
                        JGrep.Schema
                        JGrep.Type
  other-modules:        Paths_jgrep
  autogen-modules:      Paths_jgrep
  hs-source-dirs:       src


executable jgrep
  import:               base, config
                      , aeson
                      , bytestring
                      , dlist
                      , generic-lens
                      , jgrep
                      , lens
                      , mmap
                      , optparse-applicative
                      , text
                      , transformers
                      , unordered-containers
                      , vector
                      , yaml
  main-is:              Main.hs
  other-modules:        App.Commands
                        App.Commands.Query
                        App.Commands.Types
  hs-source-dirs:       app
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  other-modules:        App.Commands
                        App.Commands.Query

test-suite jgrep-test
  import:               base, config
                      , aeson
                      , bytestring
                      , directory
                      , exceptions
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , jgrep
                      , lens
                      , lens-aeson
                      , mmap
                      , transformers
                      , vector
                      , yaml
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        JGrep.CoreSpec
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover

test-suite doctest
  import:               base, config
                      , doctest
                      , doctest-discover
                      , jgrep
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              DoctestDriver.hs
  HS-Source-Dirs:       doctest
  build-tool-depends:   doctest-discover:doctest-discover
